--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,25 +131,28 @@
           </div>
 
           <div class="row">
+            <div class="col-lg-7">
                 <div class="container wow fadeInUp">
                   <div class="section-content">
                       <p>
-                          Registration is open!
+                          Registration is open! Please fill the form bellow.
                         </p>
                         <p>
-                          Due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
-                          etc...). Answering one of the several calls is adviced to increase your chances in attending the event.
+                          Note that, due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
+                          etc...). Answering one of the several calls is adviced to increase your chances in attending the event. Please click the call you are interested in.
                         </p>
-                        <p>
-                          <iframe id="inlineFrameExample"
-                              title="Inline Frame Example"
-                              width="640"
-                              height="800"
-                              src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
-                          </iframe> 
-                    </p>
                   </div>
                 </div>
+              </div>
+            <div class="col-lg-5">
+              <iframe id="inlineFrameExample"
+                            title="Inline Frame Example"
+                            width="640"
+                            height="800"
+                            src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
+                        </iframe> 
+              </div>
+            
           </div>
         </div>
       </section>
