--- a/pages/registration.html
+++ b/pages/registration.html
@@ -134,9 +134,6 @@
             <div class="col-lg-7">
                 <div class="container wow fadeInUp">
                   <div class="section-content">
-                      <p>
-                          Registration is open! Please fill the form bellow.
-                        </p>
                         <p>
                           Note that, due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
                           etc...). Answering one of the several calls is adviced to increase your chances in attending the event. Please click the call you are interested in.
@@ -145,13 +142,18 @@
                 </div>
               </div>
             <div class="col-lg-5">
-              <iframe id="inlineFrameExample"
-                            title="Inline Frame Example"
-                            width="640"
-                            height="800"
-                            src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
-                        </iframe> 
+              <section id="schedule" class="section-with-bg">
+                <p>
+                  Registration is open! Please fill the form bellow.
+                </p>    
+                <iframe id="inlineFrameExample"
+                        title="Inline Frame Example"
+                        width="640"
+                        height="800"
+                        src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
+                  </iframe> 
               </div>
+            </div>
             
           </div>
         </div>
