--- a/pages/registration.html
+++ b/pages/registration.html
@@ -138,6 +138,13 @@
                           Note that, due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
                           etc...). Answering one of the several calls is adviced to increase your chances in attending the event. Please click the call you are interested in.
                         </p>
+                    <h2>
+                      <a
+                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit a Summary</a
+                      >
+                    </h2>
                   </div>
                 </div>
               </div>
@@ -148,8 +155,7 @@
                 </p>    
                 <iframe id="inlineFrameExample"
                         title="Inline Frame Example"
-                        width="640"
-                        height="800"
+                        height="500"
                         src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
                   </iframe> 
               </div>
