--- a/pages/registration.html
+++ b/pages/registration.html
@@ -140,9 +140,14 @@
                         </p>
                     <h2>
                       <a
-                        href="https://goo.gl/forms/YQxprQZ6lNxahFlg2"
+                        href="../calls/3mt.html"
                         class="btn btn-outline-primary btn-lg"
                         >Submit a Summary</a
+                      >
+                      <a
+                        href="../calls/papers.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit a Paper</a
                       >
                     </h2>
                   </div>
@@ -150,14 +155,18 @@
               </div>
             <div class="col-lg-5">
               <section id="schedule" class="section-with-bg">
-                <p>
-                  Registration is open! Please fill the form bellow.
-                </p>    
+                <div>
+                  <h3>
+                  Registration is open! Please fill the following form:
+                    </h3>
+                </div>    
+                <div> 
                 <iframe id="inlineFrameExample"
                         title="Inline Frame Example"
-                        height="500"
+                        height="400"
                         src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
                   </iframe> 
+              </div> 
               </div>
             </div>
             
