--- a/pages/registration.html
+++ b/pages/registration.html
@@ -154,18 +154,9 @@
                 </div>
               </div>
             <div class="col-lg-5">
-              <section id="schedule" class="section-with-bg">
-                <div>
-                  <h3>
-                  Registration is open! Please fill the following form:
-                    </h3>
-                </div>    
+              <section id="schedule" class="section-with-bg"> 
                 <div> 
-                <iframe id="inlineFrameExample"
-                        title="Inline Frame Example"
-                        height="400"
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSfTvDV9H7A7d1IGUde9JD7ELBq6_pNTVE1oideS6-Nrvw3izA/viewform?embedded=true&fbclid=IwAR2sZD0dd0EMjctYm2Imgv26fyvlY1KWkZ-SYyRUh66kzPgMRLah8ZAaNdM">
-                  </iframe> 
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe> 
               </div> 
               </div>
             </div>
