--- a/pages/registration.html
+++ b/pages/registration.html
@@ -155,7 +155,7 @@
               </div>
             <div class="col-lg-5">
               <section id="schedule" class="section-with-bg"> 
-                <div> 
+                <div class="section-content">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe> 
               </div> 
               </div>
