--- a/pages/sponsorship.html
+++ b/pages/sponsorship.html
@@ -170,7 +170,7 @@
                       challenge and 3 Minutes Thesis activities, etc. We welcome any
                       innovative ideas that you might have for us. We are open to
                       discussing modifications or additional sponsorship opportunities
-                      as well. For further information, please <a href="../contact.html" target="_top"
+                      as well. For further information, please <a href="../pages/contact.html" target="_top"
                         >contact us.</a
                       >
                     </p>
