--- a/pages/registration.html
+++ b/pages/registration.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-7">
+            <div class="col-lg-6">
                 <div class="container wow fadeInUp">
                   <div class="section-content">
                         <p>
@@ -153,11 +153,11 @@
                   </div>
                 </div>
               </div>
-            <div class="col-lg-5">
+            <div class="col-lg-6">
               <section id="schedule" class="section-with-bg"> 
                 <div class="section-content">
                 <center>
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe> 
+                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" width="360" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe> 
                 </center> 
                 </div>
               </div>
