--- a/pages/registration.html
+++ b/pages/registration.html
@@ -140,12 +140,12 @@
                         </p>
                     <h2>
                       <a
-                        href="../calls/3mt.html"
+                        href="./calls/3mt.html"
                         class="btn btn-outline-primary btn-lg"
                         >Submit a Summary</a
                       >
                       <a
-                        href="../calls/papers.html"
+                        href="./calls/papers.html"
                         class="btn btn-outline-primary btn-lg"
                         >Submit a Paper</a
                       >
