--- a/pages/registration.html
+++ b/pages/registration.html
@@ -134,22 +134,14 @@
             <div class="col-lg-6">
                 <div class="container wow fadeInUp">
                   <div class="section-content">
-                        <p>
-                          Note that, due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
-                          etc...). Answering one of the several calls is adviced to increase your chances in attending the event. Please click the call you are interested in.
-                        </p>
-                    <h2>
-                      <a
-                        href="./calls/3mt.html"
-                        class="btn btn-outline-primary btn-lg"
-                        >Submit a Summary</a
-                      >
-                      <a
-                        href="./calls/papers.html"
-                        class="btn btn-outline-primary btn-lg"
-                        >Submit a Paper</a
-                      >
-                    </h2>
+                    <p>
+                      Due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
+                      etc...). Answering the
+                      <a href="./calls/3mt.html" > call for 3MT</a> 
+                      or the
+                      <a href="./calls/3mt.html"> call for Papers </a>
+                      is adviced to increase your chances in attending the event.
+                    </p>
                   </div>
                 </div>
               </div>
