--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -298,7 +298,7 @@
 				<td>INPT, Morocco </td>
 			</tr>
 <tr>
-        <td>Yassine El Amrani</td>
+        <td>Yassine Al Amrani</td>
         <td>Ensa Tetouan , Morocco </td>
       </tr>      
 			<tr>
