--- a/pages/registration.html
+++ b/pages/registration.html
@@ -120,7 +120,7 @@
 
     <main id="main" class="main-page">
     <!--==========================
-      tutorials Section
+      Registration Section
     ============================-->    
     <section class="wow fadeInUp">
         <br></br>
@@ -128,33 +128,30 @@
 
           <div class="section-header">
             <h2>Registration</h2>
+            <p>
+                Due to limited places, only partcipants answering the calls bellow are elligible to register.
+              </p>
           </div>
 
           <div class="row">
-            <div class="col-lg-6">
-                <div class="container wow fadeInUp">
-                  <div class="section-content">
-                    <p>
-                      Due to limited places, priority will be given to partcipants sharing their works (Poster presenters, 3MT participants,
-                      etc...). Answering the
-                      <a href="./calls/3mt.html" > call for 3MT</a> 
-                      or the
-                      <a href="./calls/3mt.html"> call for Papers </a>
-                      is adviced to increase your chances in attending the event.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            <div class="col-lg-6">
-              <section id="schedule" class="section-with-bg"> 
-                <div class="section-content">
+            <div class="container wow fadeInUp">
+              <div class="section-content">
                 <center>
-                  <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" width="360" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe> 
-                </center> 
-                </div>
+                  <h2>
+                        <a
+                        href="./calls/papers.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Call for Papers</a>
+
+                        <a
+                        href="./calls/3MT.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Call for 3MT</a>
+                  </h2> 
+                </center>
+                <br></br>
               </div>
-            </div>
-            
+            </div>         
           </div>
         </div>
       </section>
