--- a/index.html
+++ b/index.html
@@ -114,33 +114,48 @@
           <div class="col-lg-6">              
             <h2>About The Event</h2>
             <p class="text-justify">        
-<b>Deep Learning IndabaX Morocco 2019</b> is the first <b>Artificial Intelligence</b> oriented event supported by <b>the African Deep Learning Indaba</b>. 
-It is a locally-organized Indaba that aims to empower the community of Artificial Intelligence in Morocco. For this very first edition,
-the organizing committee is pleased to invite you to a two days event that will bring together students, researchers and industry professionals 
-from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
-<br>
-IndabaX Morocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
-the leading African countries in AI related fields.
-<br>
-The 2019 edition will be held at the Faculty of Sciences and Techniques of Mohammedia (FSTM). Numerous moroccan researchers from the field of AI participated in the making of the
-program and of the several activities. More details are described throughout this website.
-<br>
-<br>
-<b>Main objectives of the IndabaX Morocco:</b>
-<ol>
-<li> Advance the state of R&D in the field of Artificial Intelligence in Morocco 
-<li> Build a dynamic Moroccan AI community with the aim to educate, connect and support AI practitioners
-<li> Foster more collaboration between academia and industry
-<li> Increase the number of Moroccan representation in top AI conferences
-</ol>
+              <b>Deep Learning IndabaX Morocco 2019</b> is the first <b>Artificial Intelligence</b> oriented event supported by <b>the African Deep Learning Indaba</b>. 
+              It is a locally-organized Indaba that aims to empower the community of Artificial Intelligence in Morocco. For this very first edition,
+              the organizing committee is pleased to invite you to a two days event that will bring together students, researchers and industry professionals 
+              from Morocco and abroad to discuss and share their works and contributions to the field of AI in general and Machine Learning in particular.
+              <br>
+              IndabaX Morocco is also a golden opportunity to experiment with the ways in which we can strengthen the Moroccan Machine Learning community, and place Morocco among
+              the leading African countries in AI related fields.
+              <br>
+              The 2019 edition will be held at the Faculty of Sciences and Techniques of Mohammedia (FSTM). Numerous moroccan researchers from the field of AI participated in the making of the
+              program and of the several activities. More details are described throughout this website.
+              <br>
+              <br>
+              <b>Main objectives of the IndabaX Morocco:</b>
+              <ol>
+                <li> Advance the state of R&D in the field of Artificial Intelligence in Morocco 
+                <li> Build a dynamic Moroccan AI community with the aim to educate, connect and support AI practitioners
+                <li> Foster more collaboration between academia and industry
+                <li> Increase the number of Moroccan representation in top AI conferences
+              </ol>
+            </p>
           </div>
-          <div class="col-lg-3">
-            <h3>Where</h3>
-            <p>University of Hassan II Casablanca,<br> FST Mohammedia,<br> Conference Center</p>
-          </div>
-          <div class="col-lg-3">
-            <h3>When</h3>
-            <p>Monday to Tuesday<br>April 29-30, 2019</p>
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-6">
+                <h3>Where</h3>
+                <p>University of Hassan II Casablanca,<br> FST Mohammedia,<br> Conference Center</p>
+              </div>
+              <div class="col-lg-6">
+                <h3>When</h3>
+                <p>Monday to Tuesday<br>April 29-30, 2019</p>
+              </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <h3>Get notified!</h3>
+                      <h2>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8iV-g2Mu51LK3o9xyTsGvLjxxUP1RsljZdFusuRyvUI_mTg/viewform?embedded=true" width="420" height="400" frameborder="0" marginheight="0" marginwidth="0">Chargement en cours...</iframe>
+                      </h2>
+
+                  </div>
+            </div>
           </div>
         </div>
       </div>
