--- a/pages/registration.html
+++ b/pages/registration.html
@@ -129,7 +129,7 @@
           <div class="section-header">
             <h2>Registration</h2>
             <p>
-                Due to limited places, only partcipants answering the calls bellow are elligible to register.
+                Registration will open in March 31, 2019. In the meanwhile, consider to apply to the calls bellow.
               </p>
           </div>
 
@@ -147,6 +147,11 @@
                         href="./calls/3MT.html"
                         class="btn btn-outline-primary btn-lg"
                         >Call for 3MT</a>
+                    
+                        <a
+                        href="./calls/tutorials.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Call for Tutorial</a>
                   </h2> 
                 </center>
                 <br></br>
