--- a/pages/registration.html
+++ b/pages/registration.html
@@ -129,7 +129,7 @@
           <div class="section-header">
             <h2>Registration</h2>
             <p>
-                Registration will open in March 31, 2019. In the meanwhile, consider to apply to the calls bellow before <b>February 28th</b>.
+                Registration will open in March 31, 2019. In the meantime, please consider to apply to the following calls before <b>February 28th</b>.
               </p>
           </div>
 
