--- a/pages/registration.html
+++ b/pages/registration.html
@@ -144,7 +144,7 @@
                         >Call for Papers</a>
 
                         <a
-                        href="./calls/3MT.html"
+                        href="./calls/3mt.html"
                         class="btn btn-outline-primary btn-lg"
                         >Call for 3MT</a>
          
