--- a/pages/participate.html
+++ b/pages/participate.html
@@ -203,7 +203,7 @@
                   <div class="section-content">
                     <center>
                       <p>
-                        Learn the basics and advanced topics of Machine Learning
+                        Learn the basics and advanced concepts of Machine Learning
                         and Deep Learning
                       </p>
                     </center>
