--- a/pages/registration.html
+++ b/pages/registration.html
@@ -127,11 +127,13 @@
         <div class="container">
 
           <div class="section-header">
-            <h2>Registration</h2>
-            <p>
-                Registration will open in March 31, 2019. In the meantime, please consider to apply to the following calls before <b>February 28th</b>.
-              </p>
-          </div>
+                <h2>Registration</h2>
+                <p>
+                    Registration will open in March 31, 2019. </p>
+                    <p>
+                  In the meantime, please consider to apply to the following calls before <b>February 28th</b>.
+                  </p>
+              </div>
 
           <div class="row">
             <div class="container wow fadeInUp">
