--- a/pages/registration.html
+++ b/pages/registration.html
@@ -128,9 +128,12 @@
 
           <div class="section-header">
                 <h2>Registration</h2>
-                <p>
-                    Registration will open in March 31, 2019. </p>
-                    <p>
+                  <p>
+                    Registration will open in March 31, 2019. Stay tuned on
+                        <a href="https://twitter.com/indabaXmorocco" class="twitter"
+                         >Twitter <i class="fa fa-twitter"></i></a>
+                  </p>
+                  <p>
                   In the meantime, please consider to apply to the following calls before <b>February 28th</b>.
                   </p>
               </div>
