--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -264,7 +264,7 @@
 		  
 	   <tr>
         <td>Loubna Benabou</td>
-        <td> UCAM, Canada </td>
+        <td> UQAR, Canada </td>
       </tr>    	  
 	
 	 <tr>
