--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -162,9 +162,10 @@
                           the following basic rules:
                           <ul>
                             <li>Eligibility: any PhD student</li>
+                             <li>Language: English or French</li>
                             <li>
                               Every participant is required to submit a 1 page (420-480 words) summary of his
-                              PhD .
+                              speech.
                             </li>
                             <li>The thesis subject should be related to the event topic</li>
                         </ul>
