--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -165,7 +165,7 @@
                              <li>Language: English or French</li>
                             <li>
                               Every participant is required to submit a 1 page (420-480 words) summary of his
-                              speech.
+                              PhD.
                             </li>
                             <li>The thesis subject should be related to the event topic</li>
                         </ul>
