--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -146,6 +146,10 @@
 				<td>Basma Oukit</td>
 				<td>Mohammed V University, Morocco</td>
 			</tr>
+		   	 <tr>
+				<td>Erraji Zakarya </td>
+				<td>Mohammed V University, Morocco</td>
+			</tr>
 			<tr>
 				<td>Hicham Hammouchi </td>
 				<td>International University, Morocco</td>
