--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -145,11 +145,7 @@
             <tr>
 				<td>Basma Oukit</td>
 				<td>Mohammed V University, Morocco</td>
-			</tr>
-		   	 <tr>
-				<td>Erraji Zakarya </td>
-				<td>Mohammed V University, Morocco</td>
-			</tr>
+		    </tr>
 			<tr>
 				<td>Hicham Hammouchi </td>
 				<td>International University, Morocco</td>
@@ -173,6 +169,14 @@
             <tr>
 				<td>Sara Sekkate</td>
 				<td>Hassan II University, Morocco </td>
+			</tr>
+		    <tr>
+				<td>Youness Choubik </td>
+				<td>Mohammed V University, Morocco</td>
+			</tr>
+		    <tr>
+				<td>Erraji Zakarya </td>
+				<td>Mohammed V University, Morocco</td>
 			</tr>
            
 		</table>
