--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                              <div class="row schedule-item">
                                 <div class="col-md-5"><time>March 31, 2019</time></div>
                                 <div class="col-md-7">
-                                  <h4>Registration</h4>
+                                  <h4>Registration due</h4>
                                   <p> </p>
                                 </div>
                              </div>
