--- a/pages/calls/3mt.html
+++ b/pages/calls/3mt.html
@@ -218,7 +218,7 @@
                            <div class="row schedule-item">
                               <div class="col-md-5"><time><h6>March 31, 2019</h6></time></div>
                               <div class="col-md-7">
-                                <h6><b>Registration</b></h6>
+                                <h6><b>Registration due</b></h6>
                                 <p> </p>
                               </div>
                            </div>
