--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -178,7 +178,7 @@
                     <td>Mohammed V University, Morocco</td>
                   </tr>
                   <tr>
-                    <td>Erraji Zakarya </td>
+                    <td>Zakarya Erraji </td>
                     <td>Mohammed V University, Morocco</td>
                   </tr>
                    
@@ -254,6 +254,10 @@
                 <td>Caddi Ayad University, Morocco </td>
               </tr>
               <tr>
+                  <td>Karim Benzidane</td>
+                  <td> Hassan II University, Morocco </td>
+              </tr>  
+              <tr>
                 <td>Khalid Fakhar</td>
                 <td> Mohammed V University, Morocco </td>
               </tr>
@@ -279,6 +283,10 @@
                 <td>Mhamed Zineddine</td>
                 <td> UEMF , Morocco </td>
               </tr>
+              <tr>
+                <td>Mohammed Baslam</td>
+                <td> Sultan Moulay Slimane University, Morocco</td>
+              </tr>  
               <tr>
                 <td>Mohammed El Hassouni</td>
                 <td> Mohammed V University, Morocco</td>
