--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -247,7 +247,7 @@
               </tr>
              <tr>
                 <td>Hicham Zougagh</td>
-                <td>Caddi Ayad University, Morocco </td>
+                <td>Sultan Moulay Slimane University, Morocco </td>
               </tr>
             
             
