--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -224,7 +224,7 @@
               </tr>
               <tr>
                 <td>Ayoub Karine </td>
-                <td>ENSTA Bretagne, France </td>
+                <td>Haute-Alsace University , France </td>
               </tr>
                     <tr>
                 <td>Ayoub Tamim</td>
