--- a/pages/event/committees.html
+++ b/pages/event/committees.html
@@ -230,6 +230,11 @@
                 <td>Ayoub Tamim</td>
                 <td>ISPM Agadir, Morocco </td>
               </tr>
+              </tr>
+                    <tr>
+                <td>Brahim Raouyane</td>
+                <td>Hassan II University, Morocco </td>
+              </tr>
               <tr>
                 <td>Cherkaoui Leghris</td>
                 <td>Hassan II University, Morocco </td>
