--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </li>
         </li>
         <li><a href="pages/program.html">Program</a></li>
-        <li><a href="pages/aplication.html">Aplication</a></li>
+        <li><a href="pages/application.html">Application</a></li>
         <li><a href="pages/registration.html">Registration</a></li>
         <li><a href="pages/sponsorship.html">Sponsorship</a></li>
         <li><a href="pages/venue.html">Venue</a></li>
