--- a/pages/participate.html
+++ b/pages/participate.html
@@ -107,6 +107,7 @@
               </div>
             </li>
             <li><a href="program.html">Program</a></li>
+            <li><a href="pages/application.html">Application</a></li>
             <li><a href="registration.html">Registration</a></li>
             <li><a href="sponsorship.html">Sponsorship</a></li>
             <li><a href="venue.html">Venue</a></li>
