--- a/pages/program.html
+++ b/pages/program.html
@@ -75,6 +75,7 @@
               </div>
           </li>
           <li class="menu-active"><a href="#">Program</a></li>
+          <li><a href="pages/application.html">Application</a></li>
             <li><a href="registration.html">Registration</a></li>
             <li><a href="sponsorship.html">Sponsorship</a></li>
             <li><a href="venue.html">Venue</a></li>
