--- a/pages/venue.html
+++ b/pages/venue.html
@@ -77,6 +77,7 @@
               </div>
           </li>
           <li><a href="program.html">Program</a></li>
+          <li><a href="pages/application.html">Application</a></li>
             <li><a href="registration.html">Registration</a></li>
             <li><a href="sponsorship.html">Sponsorship</a></li>
             <li class="menu-active"><a href="#">Venue</a></li>
