--- a/pages/application.html
+++ b/pages/application.html
@@ -107,9 +107,9 @@
               </div>
             </li>
             <li><a href="program.html">Program</a></li>
-            <li><a href="application.html">Application</a></li>
+            <li class="menu-active"><a href="#">Application</a></li>
             <li><a href="registration.html">Registration</a></li>
-            <li class="menu-active"><a href="#">Sponsorship</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
             <li><a href="venue.html">Venue</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
