--- a/pages/event/tutorials.html
+++ b/pages/event/tutorials.html
@@ -76,7 +76,8 @@
                   <a class="dropdown-item"  href="../calls/tutorials.html">Call for Tutorials</a>
               </div>
           </li>
-                      <li><a href="../program.html">Program</a></li>
+            <li><a href="../program.html">Program</a></li>
+            <li><a href="../application.html">Application</a></li>
             <li><a href="../registration.html">Registration</a></li>
             <li><a href="../sponsorship.html">Sponsorship</a></li>
             <li><a href="../venue.html">Venue</a></li>
