--- a/pages/application.html
+++ b/pages/application.html
@@ -120,142 +120,91 @@
     <!-- #header -->
 
     <main id="main" class="main-page">
-    <!--==========================
-      sponsors Section
-    ============================-->    
-    <section class="wow fadeInUp">
-        <br></br>
-        <div class="container">
-
+      <!--==========================
+    Apply
+    ============================-->
+      <section id="awards">
+        <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>Sponsors Request</h2>
+            <h2>Why participate?</h2>
           </div>
-
           <div class="row">
-            <div class="col-lg-7">
-                <div class="container wow fadeInUp">
-                  <div class="section-content">
-                    <p>
-                      The Deep Learning IndabaX-Morocco 2019, is the first Deep Learning
-                      event in Morocco supported by the <b>African Deep Learning Indaba</b>. It is a locally-organized
-                      Indaba that aims to empower the community of Artificial
-                      Intelligence in Morocco.
-                    </p>
-                    <p>
-                      The event will take place at the Faculty of Sciences and Techniques of Mohammedia (FSTM) in
-                      order to share advanced knowledge of Deep Learning to students,
-                      researchers and industry professionals. The event will bring
-                      together local and Moroccan diaspora experts to expose students to
-                      state-of-the-art methods and practical skills in AI advanced
-                      technologies.
-                    </p>
-                    <p>
-                      Your organization is invited to support Deep Learning Indaba X
-                      Morocco 2019. This is an ideal way to demonstrate your
-                      organization's commitment to the field of artificial intelligence
-                      including Deep Learning in Morocco, and many other areas at the
-                      frontier of technological innovation and to publicize this support
-                      to many leaders and students in the field. Exhibits by sponsors
-                      also help inform researchers and engineers about relevant
-                      applications and opportunities.
-                    </p>
-                    <p>
-                      Your support is an investment in the next generation of Moroccan
-                      talents in AI. It removes barriers to participation and will
-                      typically be used to permit a greater number of students to attend
-                      Indaba X Morocco free of charge.
-                    </p>
-                    <p>
-                      Your support can be targeted to a particular event or activity at
-                      the event. You can, for example, propose awards for the data
-                      challenge and 3 Minutes Thesis activities, etc. We welcome any
-                      innovative ideas that you might have for us. We are open to
-                      discussing modifications or additional sponsorship opportunities
-                      as well. For further information, please <a href="../pages/contact.html" target="_top"
-                        >contact us.</a
-                      >
-                    </p>
-                    <p>
-                      The organizing committee ensures that these contributions are well
-                      recognized. We hope that you will take advantage of this great
-                      opportunity to sponsor and/or exhibit your products, services and
-                      brand to a large audience of specialists in Artificial
-                      Intelligence in Morocco.
-                    </p>
-                    
-                  </div>
-                </div>
-            </div>
-            <div class="col-lg-5">
+            <div class="col-lg-3">
               <section id="schedule" class="section-with-bg">
                 <div class="container wow fadeInUp">
-                    <div class="section-header">
-                      <h2>
-                      <a
-                      href="../contact.html"
-                      class="btn btn-outline-primary btn-lg"
-                      >Sponsor Us</a>
-                    </h2>
-                    </div>
-                    <div class="section-content">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Call for Papers
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
                       <p>
-                          Indaba X Morocco 2019 has three sponsorship levels: Gold, Silver,
-                          and Bronze. We list the sponsor benefits and costs below:
-                        </p>
-                    <table class="table table-hover">
-                      <thead class="thead-light">
-                        <tr>
-                          <th scope="col"></th>
-                          <th scope="col">GOLD (+30K MAD)</th>
-                          <th scope="col">SILVER (+20K MAD)</th>
-                          <th scope="col">BRONZE (+10K MAD)</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Participants</th>
-                          <td>x3</td>
-                          <td>x2</td>
-                          <td>x1</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Keynotes</th>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Acknowledge</th>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Panels</th>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Tutorials</th>
-                          <td>x3</td>
-                          <td>x2</td>
-                          <td>x1</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Data Challenge</th>
-                          <td>&#9679;</td>
-                          <td>&#9679;</td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Demos</th>
-                          <td>&#9679;</td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                      </tbody>
-                    </table>
+                        Submit
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Call for 3MT
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Submit
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Call for Tutorials
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Submit
+                      </p>
+                    </center>
+                  </div>
+                </div>
+              </section>
+            </div>
+            <div class="col-lg-3">
+              <section id="schedule" class="section-with-bg">
+                <div class="container wow fadeInUp">
+                  <div class="section-header">
+                    <center>
+                      <h3>
+                        Call for Data Challenge
+                      </h3>
+                    </center>
+                  </div>
+                  <div class="section-content">
+                    <center>
+                      <p>
+                        Soon!
+                      </p>
+                    </center>
                   </div>
                 </div>
               </section>
@@ -264,11 +213,8 @@
         </div>
       </section>
     </main>
-  <!--==========================
-    End main
-  ============================-->
 
-    <!--==========================
+   <!--==========================
     Footer
   ============================-->
    <footer id="footer">
