--- a/pages/application.html
+++ b/pages/application.html
@@ -126,7 +126,7 @@
       <section id="awards">
         <div class="container wow fadeInUp">
           <div class="section-header">
-            <h2>Why participate?</h2>
+            <h2>Apply</h2>
           </div>
           <div class="row">
             <div class="col-lg-3">
