--- a/pages/application.html
+++ b/pages/application.html
@@ -141,9 +141,10 @@
                   </div>
                   <div class="section-content">
                     <center>
-                      <p>
-                        Submit
-                      </p>
+                        <a
+                        href="./calls/papers.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Call for Papers</a>
                     </center>
                   </div>
                 </div>
@@ -161,9 +162,10 @@
                   </div>
                   <div class="section-content">
                     <center>
-                      <p>
-                        Submit
-                      </p>
+                        <a
+                        href="./calls/3mt.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit</a>
                     </center>
                   </div>
                 </div>
@@ -181,9 +183,10 @@
                   </div>
                   <div class="section-content">
                     <center>
-                      <p>
-                        Submit
-                      </p>
+                        <a
+                        href="./calls/tutorials.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Submit</a>
                     </center>
                   </div>
                 </div>
