--- a/pages/application.html
+++ b/pages/application.html
@@ -135,7 +135,7 @@
                   <div class="section-header">
                     <center>
                       <h3>
-                        Call for Papers
+                        Submit a Paper
                       </h3>
                     </center>
                   </div>
@@ -144,7 +144,7 @@
                         <a
                         href="./calls/papers.html"
                         class="btn btn-outline-primary btn-lg"
-                        >Call for Papers</a>
+                        >Go!</a>
                     </center>
                   </div>
                 </div>
@@ -156,7 +156,7 @@
                   <div class="section-header">
                     <center>
                       <h3>
-                        Call for 3MT
+                        3 minutes Thesis
                       </h3>
                     </center>
                   </div>
@@ -165,7 +165,7 @@
                         <a
                         href="./calls/3mt.html"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit</a>
+                        >Go!</a>
                     </center>
                   </div>
                 </div>
@@ -177,7 +177,7 @@
                   <div class="section-header">
                     <center>
                       <h3>
-                        Call for Tutorials
+                        Propose a Tutorial
                       </h3>
                     </center>
                   </div>
@@ -186,7 +186,7 @@
                         <a
                         href="./calls/tutorials.html"
                         class="btn btn-outline-primary btn-lg"
-                        >Submit</a>
+                        >Go!</a>
                     </center>
                   </div>
                 </div>
@@ -198,15 +198,16 @@
                   <div class="section-header">
                     <center>
                       <h3>
-                        Call for Data Challenge
+                        Data Challenge
                       </h3>
                     </center>
                   </div>
                   <div class="section-content">
                     <center>
-                      <p>
-                        Soon!
-                      </p>
+                        <a
+                        href="./calls/dataChallenge.html"
+                        class="btn btn-outline-primary btn-lg"
+                        >Go!</a>
                     </center>
                   </div>
                 </div>
