--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <img src="img/ai-and-machine-learning.png" style="width: 20%">
       <h1 class="mb-4 pb-0">DEEP LEARNING <br><span class="up">IndabaX Morocco </span> </h1>
       <p class="mb-4 pb-0">April 29-30, 2019 <br> University of Hassan II Casablanca<br> Faculty of Sciences and Techniques (FST) of Mohammedia<br> </p>
-      <a href="#about" class="about-btn scrollto">About The Event</a>
-
+      <!--<a href="#about" class="about-btn scrollto">About The Event</a>-->
+      <a href="./pages/application.html" class="about-btn scrollto">Apply Now!</a>
       <a href="./IndabaXMorocco.pdf" class="poster-btn scrollto">Download poster</a>
     </div>
   </section>
